<resources>
    <string name="app_name">decormoveis</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_password">Senha</string>
    <string name="hint_name">Nome</string>
    <string name="button_login">Entrar</string>
    <string name="button_cadastrar">Cadastrar</string>
    <string name="button_vamosla">Vamos lá!</string>
    <string name="txt_decormoveis">Decor Móveis</string>
    <string name="txt_bemvindo">Bem vindo!</string>
    <string name="txt_conecte_se">Conecte-se a mudança</string>
    <string name="txt_login">Login</string>
    <string name="txt_esqueci">Esqueci a senha!</string>
    <string name="txt_cadastrarNovaConta">Cadastrar uma nova conta! Cadastrar</string>
    <string name="txt_loginConta">Já tem uma conta! Acessar</string>
    <string name="txt_ofertaSemana">Ofertas da semana</string>
    <string name="txt_decorMoveis">Pesquisar na Decor Móveis</string>
    <string name="txt_ofertasBlack">Ofertas Black Frieday</string>
    <string name="txt_cep">Enviar para CEP 78216-060</string>

</resources>