<?xml version="1.0" encoding="utf-8"?>
<!-- Principal camada de fundo -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity3"
    android:background="@drawable/walpaper_inicial">

    <!-- Efeito de fundo preto com 50% de transparencia  -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/black"
        android:alpha="0.5"/>

    <!-- Logo Decor Moveis -->
    <ImageView
        android:id="@+id/ic_logo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:src="@drawable/logo_decor"
        android:layout_marginTop="100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <!-- Texto Decor Moveis -->
    <TextView
        android:id="@+id/ic_text_decormoveis"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_decormoveis"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ic_logo" />

    <!-- Background verde -->
    <LinearLayout
        android:id="@+id/ic_background_green"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="420dp"
        android:background="@drawable/background_border"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <!-- Texto Cadastro -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cadastrar"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"/>
    </LinearLayout>

    <!-- Background Cinza -->
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/ic_background_gray"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/background_border"
        android:backgroundTint="@color/gray_light"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

    </LinearLayout>

    <!-- Input Nome -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ic_text_InputLayoutNome"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_background_gray"
        android:layout_marginTop="18dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/green_light"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <!-- Edit Nome -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNome"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_name"
            android:inputType="textPersonName"
            android:background="@color/white"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            android:drawableEnd="@drawable/ic_person"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Email -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ic_text_InputLayoutEmail"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/ic_text_InputLayoutNome"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/green_light"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <!-- Edit Email -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editEmail"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress"
            android:background="@color/white"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            android:drawableEnd="@drawable/ic_email"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Input Password -->
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/ic_text_InputLayoutPassword"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_text_InputLayoutEmail"
        android:layout_marginTop="60dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:boxStrokeColor="@color/green_light"
        app:hintAnimationEnabled="true"
        app:hintTextColor="@color/black"
        app:errorTextColor="@color/red"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">
        <!-- Edit Password -->
        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editPassword"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:background="@color/white"
            android:maxLines="1"
            android:textSize="18sp"
            android:padding="15dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Button entrar -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button_cadastrar"
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:text="@string/button_login"
        android:textSize="15sp"
        android:textColor="@color/white"
        android:background="@drawable/background_button"
        android:layout_marginTop="220dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/ic_background_gray"
        />

    <!-- Button facebook -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ic_facebook"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_botao_redondo"
        android:layout_marginTop="60dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="@id/ic_google"
        app:layout_constraintTop_toTopOf="@id/button_cadastrar"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_facebook"
            android:elevation="20dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="@id/ic_google"
            app:layout_constraintTop_toBottomOf="@id/button_cadastrar"/>

    <!-- Button google -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ic_google"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_botao_redondo"
        android:layout_marginTop="60dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_cadastrar"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_google"
            android:elevation="20dp"
            android:layout_marginTop="18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_cadastrar"/>

    <!-- Button instagram -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/ic_instagram"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:background="@drawable/background_botao_redondo"
        android:layout_marginTop="60dp"
        android:elevation="20dp"
        app:layout_constraintStart_toStartOf="@id/ic_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/button_cadastrar"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_instagram"
            android:elevation="20dp"
            android:layout_marginTop="20dp"
            app:layout_constraintStart_toStartOf="@id/ic_google"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button_cadastrar"/>

    <!-- Texto Acessar -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_loginConta"
        android:textSize="11sp"
        android:textColor="@color/gray_dark"
        android:layout_marginTop="05dp"
        app:layout_constraintTop_toBottomOf="@id/ic_google"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>